@@ -71,13 +71,11 @@
             <groupId>jakarta.xml.bind</groupId>
             <artifactId>jakarta.xml.bind-api</artifactId>
             <version>2.3.2</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
             <version>2.3.2</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testfx</groupId>
@@ -138,27 +136,13 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.6</version>
                 <configuration>
-                    <options>
-                        <option>
-                            --add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls
-                        </option>
-                        <option>
-                            -add-reads javafx.graphics=ALL-UNNAMED
-                        </option>
-                        <option>
-                            --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                        </option>
-                        <option>
-                            --add-opens=otp/otp.controllers=ALL-UNNAMED
-                        </option>
-                    </options>
                 </configuration>
                 <executions>
                     <execution>
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>otp/otp.Main</mainClass>
+                            <mainClass>otp.Main</mainClass>
                         </configuration>
                     </execution>
                 </executions>
